[gd_scene load_steps=2 format=3 uid="uid://nw6ky8uht1nh"]

[ext_resource type="Script" uid="uid://o6tyy4yypytw" path="res://Main.gd" id="1_glv2v"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_glv2v")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.878431, 0.878431, 0.878431, 1)

[node name="MainLayout" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -68.5
offset_right = 115.0
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2

[node name="LightContainer" type="HBoxContainer" parent="ColorRect/MainLayout"]
layout_mode = 2
theme_override_constants/separation = 34

[node name="Light1" type="ColorRect" parent="ColorRect/MainLayout/LightContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Light2" type="ColorRect" parent="ColorRect/MainLayout/LightContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Light3" type="ColorRect" parent="ColorRect/MainLayout/LightContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="ColorRect/MainLayout"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Button1" type="Button" parent="ColorRect/MainLayout/ButtonContainer"]
layout_mode = 2
text = "Switch A"

[node name="Button2" type="Button" parent="ColorRect/MainLayout/ButtonContainer"]
layout_mode = 2
text = "Switch B"

[node name="Button3" type="Button" parent="ColorRect/MainLayout/ButtonContainer"]
layout_mode = 2
text = "Switch C"

[node name="WinLabel" type="Label" parent="ColorRect/MainLayout"]
layout_mode = 2
theme_override_colors/font_color = Color(3.08037e-06, 0.778717, 1.92523e-06, 1)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
